Details
-
Bug
-
Resolution: Done
-
Not Evaluated
-
5.0.0
-
Windows 7, msvc 64 bit
-
108e708e7068bcd402c7f3202e76ab2c2ebd9a68, ef4783d2978ec5edf1b90ef5a13467c6c9ee3df6
Description
For example, in Qt 4.8.1 you get a wide variety of available font sizes for Courier font in QFontDialog, but in Qt 5.0 with native font engine, you only get size 10. With freetype engine Courier font is not even available.
Attachments
Issue Links
- is required for
-
QTBUG-24205 Qt 5.0 - Windows: Check fonts
-
- Closed
-
- resulted in
-
QTBUG-40057 QFontDatabase::standardSizes() range changed on Mac
-
- Closed
-